--- a/Erp8/Ornek5.html
+++ b/Erp8/Ornek5.html
@@ -128,8 +128,11 @@
                 KullanicilariGetir();
             }); // btn ekle bitti
 
-            $('btnTemilze').click(function () {
-
+            $('btnTemizle').click(function () {
+                //txtler temizlensin
+                $("#txtAd").val('');
+                $("#txtSoyad").val('');
+                $("#txtEmail").val('');
             });
 
 
