--- a/Erp8/Ornek5.html
+++ b/Erp8/Ornek5.html
@@ -128,11 +128,12 @@
                 KullanicilariGetir();
             }); // btn ekle bitti
 
-            $('btnTemizle').click(function () {
+            $('#btnTemizle').click(function () {
                 //txtler temizlensin
                 $("#txtAd").val('');
                 $("#txtSoyad").val('');
                 $("#txtEmail").val('');
+                $('#dogumtrh').val('');
             });
 
 
