--- a/Erp8/DandR/Anasayfa.html
+++ b/Erp8/DandR/Anasayfa.html
@@ -13,21 +13,31 @@
 <body>
     <div class="container">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-            <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+            <!--<a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
                 <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap" /></svg>
-            </a>
-
-            <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
-                <li><a href="#" class="nav-link px-2 link-dark">Features</a></li>
-                <li><a href="#" class="nav-link px-2 link-dark">Pricing</a></li>
-                <li><a href="#" class="nav-link px-2 link-dark">FAQs</a></li>
-                <li><a href="#" class="nav-link px-2 link-dark">About</a></li>
+            </a>-->
+            <div class="col-md-1">
+                503
+            </div>
+            <ul class="nav col-8 col-md-auto mb-2 justify-content-center mb-md-0">
+                <li><a href="#" class="nav-link px-2 link-dark">Yurt Dışından Kitap</a></li>
+                <li><a href="#" class="nav-link px-2 link-dark">Hediye Kartı</a></li>
+                <li><a href="#" class="nav-link px-2 link-dark">Markalar</a></li>
+                <li><a href="#" class="nav-link px-2 link-dark">Yayınevleri</a></li>
+                <li><a href="#" class="nav-link px-2 link-dark">Yazarlar</a></li>
+                <li><a href="#" class="nav-link px-2 link-dark">Mağaza Etkinlikleri </a></li>
+                <li><a href="#" class="nav-link px-2 link-dark">Mağazalar</a></li>
+                <li><a href="#" class="nav-link px-2 link-dark">Sipariş Takip </a></li>
             </ul>
 
-            <div class="col-md-3 text-end">
-                <button type="button" class="btn btn-outline-primary me-2">Login</button>
-                <button type="button" class="btn btn-primary">Sign-up</button>
+            <div class="col-md-3 text-end" style="font-size:14px; font-weight:bold">
+                <a class="px-2">
+                    <i class="bi bi-phone" style="font-size:20px;"></i> +90539 679 66 50
+                </a>
+                <a>
+                    <i class="bi bi-whatsapp" style="font-size:20px;" ></i> Whatsapp
+                </a>
+
             </div>
         </header>
     </div>
