--- a/Erp8/DandR/Anasayfa.html
+++ b/Erp8/DandR/Anasayfa.html
@@ -1,48 +1,88 @@
 ﻿<!DOCTYPE html>
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="tr" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
     <title>503 D&R - Kültür, Sanat ve Eğlence Dünyası</title>
+
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/2232/2232688.png" />
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" href="Anasayfa.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/6747/6747073.png" />
-
 </head>
 <body>
+
     <div class="container">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
             <!--<a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
                 <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap" /></svg>
             </a>-->
+            <!--<div class="col-md-1 text-start">
+
+            </div>-->
             <div class="col-md-1">
-                503
+                <i> 503</i>
             </div>
-            <ul class="nav col-8 col-md-auto mb-2 justify-content-center mb-md-0">
+            <ul class="nav col-7 col-md-auto mb-2 justify-content-center mb-md-0"
+                style="font-size:12px;font-weight:bold">
                 <li><a href="#" class="nav-link px-2 link-dark">Yurt Dışından Kitap</a></li>
                 <li><a href="#" class="nav-link px-2 link-dark">Hediye Kartı</a></li>
                 <li><a href="#" class="nav-link px-2 link-dark">Markalar</a></li>
                 <li><a href="#" class="nav-link px-2 link-dark">Yayınevleri</a></li>
                 <li><a href="#" class="nav-link px-2 link-dark">Yazarlar</a></li>
-                <li><a href="#" class="nav-link px-2 link-dark">Mağaza Etkinlikleri </a></li>
+                <li><a href="#" class="nav-link px-2 link-dark">Mağaza Etkinlikleri</a></li>
                 <li><a href="#" class="nav-link px-2 link-dark">Mağazalar</a></li>
-                <li><a href="#" class="nav-link px-2 link-dark">Sipariş Takip </a></li>
+                <li><a href="#" class="nav-link px-2 link-dark">Sipariş Takip</a></li>
             </ul>
 
-            <div class="col-md-3 text-end" style="font-size:14px; font-weight:bold">
-                <a class="px-2">
-                    <i class="bi bi-phone" style="font-size:20px;"></i> +90539 679 66 50
-                </a>
-                <a>
-                    <i class="bi bi-whatsapp" style="font-size:20px;" ></i> Whatsapp
-                </a>
+            <div class="col-2 col-md-auto text-end" style="font-size:14px; font-weight:bold;">
+                <span class="col px-2">
+                    <i class="bi bi-phone" style="font-size: 20px;"></i> +90 539 679 66 50
+                </span>
+            </div>
+            <div class="col-2 col-md-auto text-end" style="font-size:14px; font-weight:bold;">
+                <span class="col px-2">
+                    <i class="bi bi-whatsapp" style="font-size: 20px;"></i> Whatsapp
+                </span>
+            </div>
 
+        </header>
+
+        <header class="mb-3 border-bottom">
+            <div class="container">
+                <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                    <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
+                        <img src="https://www.dr.com.tr/Themes/DR/Content/NewTheme/assets/dist/images/frontend/logo.svg" alt="logo" width="84" height="64" />
+                    </a>
+
+                    <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                        <li><a href="#" class="nav-link px-2 link-secondary">Overview</a></li>
+                        <li><a href="#" class="nav-link px-2 link-dark">Inventory</a></li>
+                        <li><a href="#" class="nav-link px-2 link-dark">Customers</a></li>
+                        <li><a href="#" class="nav-link px-2 link-dark">Products</a></li>
+                    </ul>
+
+                    <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+                        <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
+                    </form>
+
+                    <div class="dropdown text-end">
+                        <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+                            <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
+                        </a>
+                        <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
+                            <li><a class="dropdown-item" href="#">New project...</a></li>
+                            <li><a class="dropdown-item" href="#">Settings</a></li>
+                            <li><a class="dropdown-item" href="#">Profile</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#">Sign out</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </header>
     </div>
-
-
 
 </body>
 </html>
