--- a/Erp8/DandR/Anasayfa.html
+++ b/Erp8/DandR/Anasayfa.html
@@ -49,38 +49,57 @@
 
         </header>
 
-        <header class="mb-3 border-bottom">
-            <div class="container">
-                <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                    <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
-                        <img src="https://www.dr.com.tr/Themes/DR/Content/NewTheme/assets/dist/images/frontend/logo.svg" alt="logo" width="84" height="64" />
-                    </a>
+        <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+            <!--<a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+                <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap" /></svg>
+            </a>-->
+            <!--<div class="col-md-1 text-start">
 
-                    <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                        <li><a href="#" class="nav-link px-2 link-secondary">Overview</a></li>
-                        <li><a href="#" class="nav-link px-2 link-dark">Inventory</a></li>
-                        <li><a href="#" class="nav-link px-2 link-dark">Customers</a></li>
-                        <li><a href="#" class="nav-link px-2 link-dark">Products</a></li>
-                    </ul>
+            </div>-->
+            <div class="col-md-1">
+                <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
+                    <img src="https://www.dr.com.tr/Themes/DR/Content/NewTheme/assets/dist/images/frontend/logo.svg" alt="logo" width="84" height="64" />
+                </a>
+            </div>
 
-                    <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-                        <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
-                    </form>
+            <div class="col-md-5 align-items-center">
 
-                    <div class="dropdown text-end">
-                        <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
-                        </a>
-                        <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
-                            <li><a class="dropdown-item" href="#">New project...</a></li>
-                            <li><a class="dropdown-item" href="#">Settings</a></li>
-                            <li><a class="dropdown-item" href="#">Profile</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Sign out</a></li>
-                        </ul>
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <i class="bi bi-search"
+                               style="padding:10px"></i>
+                        </span>
                     </div>
+                    <input type="text" style="font-size:12px" class="form-control"
+                           placeholder="Kitap,Elektronik,Oyuncak,Kırtasiye ürün,kategori ve marka ara...">
+                    <button type="button" class="btn btn-default" style="background-color: #084793;color:white;">
+                        Ara
+                    </button>
+
+
+
                 </div>
             </div>
+            <div class="col-md-5 dropdown text-end">
+                <a href="#" class="link-dark text-decoration-none"
+                   style="font-weight:bold">Favori Listem</a>
+                <a href="#" class="link-dark text-decoration-none" style="font-weight:bold">Kampanyalar</a>
+                <a href="#" class="link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false" style="font-weight:bold">
+                    Giriş Yap
+                </a>
+                <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
+                    <li><a class="dropdown-item" href="#">GİRİŞ YAP.</a></li>
+                    <li><a class="dropdown-item" href="#">KAYIT OL</a></li>
+
+                </ul>
+
+                <a href="#" class="link-dark text-decoration-none" style="font-weight:bold">
+                    Sepetim <i class="bi bi-basket3-fill" style="font-size:20px;"></i><sup style="background-color:red; color:white; border-radius: 100%; padding:3px">9</sup>
+                </a>
+
+            </div>
+
         </header>
     </div>
 
