last Anasayfa.html

--- a/Erp8/DandR/Anasayfa.html
+++ b/Erp8/DandR/Anasayfa.html
@@ -235,7 +235,7 @@
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden"></span>
+                <span class="visually-hidden">Next</span>
             </button>
         </div>
     </div>
@@ -249,60 +249,66 @@
             <div id="myCarousel" class="carousel slide w-100" data-ride="carousel">
                 <div class="carousel-inner w-100" role="listbox">
                     <div class="carousel-item active">
-                        <div class="col-lg-2">
-                            <img class="img-fluid" src="http://placehold.it/350x180?text=1">
+                        <div class="card" style="width: 200px;">
+                            <img src="https://i.dr.com.tr/cache/154x170-0/originals/0002036278001-1.jpg" style="height:200px" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h6 class="card-title">Tanrı İnsan Hayvan</h6>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">Mighan O'Gieblyn</li>
+                                <li class="list-group-item">48,00TL</li>
+                                <li class="list-group-item">İnce Kapak</li>
+                                <li class="list-group-item">
+                                    <a class="btn btn-default btn-sm container"
+                                       style="background-color:#e20714;color:white;">Sepete Ekle</a>
+                                </li>
+                            </ul>
+                        </div>
+
+                    </div>
+                    <div class="carousel-item">
+                        <div class="card" style="width: 200px;">
+                            <img src="https://i.dr.com.tr/cache/154x170-0/originals/0002015492001-1.jpg" style="height:200px" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h6 class="card-title">Sıfır Atık Hareketi</h6>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">Süreyya M.Kılınç</li>
+                                <li class="list-group-item">65,50TL</li>
+                                <li class="list-group-item">İnce Kapak</li>
+                                <li class="list-group-item">
+                                    <a class="btn btn-default btn-sm container"
+                                       style="background-color:#e20714;color:white;">Sepete Ekle</a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="col-lg-2">
-                            <img class="img-fluid" src="http://placehold.it/350x180?text=2">
+                        <div class="card" style="width: 200px;">
+                            <img src="https://i.dr.com.tr/cache/154x170-0/originals/0002038176001-1.jpg" style="height:200px" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h6 class="card-title">Sıfır Atık Hareketi</h6>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">Süreyya M.Kılınç</li>
+                                <li class="list-group-item">65,50TL</li>
+                                <li class="list-group-item">İnce Kapak</li>
+                            </ul>
                         </div>
                     </div>
-                    <div class="carousel-item">
-                        <div class="col-lg-2">
-                            <img class="img-fluid" src="http://placehold.it/350x180?text=3">
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="col-lg-2">
-                            <img class="img-fluid" src="http://placehold.it/350x180?text=4">
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="col-lg-2">
-                            <img class="img-fluid" src="http://placehold.it/350x180?text=5">
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="col-lg-2">
-                            <img class="img-fluid" src="http://placehold.it/350x180?text=6">
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="col-lg-2">
-                            <img class="img-fluid" src="http://placehold.it/350x180?text=7">
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="col-lg-2">
-                            <img class="img-fluid" src="http://placehold.it/350x180?text=8">
-                        </div>
-                    </div>
+
+
                 </div>
                 <a class="carousel-control-prev bg-dark w-auto" href="#myCarousel" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only"></span>
                 </a>
                 <a class="carousel-control-next bg-dark w-auto" href="#myCarousel" role="button" data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only"></span>
                 </a>
             </div>
         </div>
 
     </div>
-
-
 
 
 
