--- a/Erp8/PetShopProject/index.html
+++ b/Erp8/PetShopProject/index.html
@@ -2,9 +2,16 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Pet Shop Website</title>
+    <title>Pet Shop Website Template</title>
+    <!-- Favicon -->
+    <link href="img/favicon.ico" rel="icon">
+    <!-- Google Web Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@700&display=swap" rel="stylesheet">
+
 </head>
 <body>
+
 
 </body>
 </html>
