--- a/Erp8/PetShopProject/index.html
+++ b/Erp8/PetShopProject/index.html
@@ -11,7 +11,56 @@
 
 </head>
 <body>
+    <!--Topbar Start-->
+    <div class="container-fluid border-bottom d-none d-lg-block">
+        <div class="row gx-0">
+            <div class="col-lg-4 text-center py-2">
+                <div class="d-inline-flex align-items-center">
+                    <i class="bi bi-geo-alt text-primary fs-1 me-3"></i>
+                    <div class="text-start">
+                        <h6 class="text-uppercase mb-1">Our Office</h6>
+                        <span>Barbaros Street, Istanbul, TURKEY </span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 text-center py-2">
+                <div class="d-inline-flex align-items-center">
+                    <i class="bi bi-geo-alt text-primary "></i>
+                    <div class="text-start">
+                        <h6 class="text-uppercase mb-1">Email Us</h6>
+                        <span>infoPetShop@gmail.com </span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 text-center py-2">
+                <div class="d-inline-flex align-items-center">
+                    <i class="bi bi-geo-alt text-primary "></i>
+                    <div class="text-start">
+                        <h6 class="text-uppercase mb-1">Call Us</h6>
+                        <span>+90 0542 658 89 98 </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
+
+
+
+
+
+
+
+    <!--Topbar End-->
+    <!-- JavaScript Libraries -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    
+
+    <!-- Template Javascript -->
+    <script src="js/main.js"></script>
 </body>
 </html>
